# team-8-case-2

./: .gitignore  README.md  checkpoint1.ipynb  checkpoint2.ipynb  checkpoint3.ipynb  eda.ipynb  pyproject.toml  Презентация_CSAT_Команда8.pptx
data/: app_survey.csv
