[project]
name = "team-8-case-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.0",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
